<?xml version="1.0" encoding="utf-8"?>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_light">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="0dp"
            android:layout_height="?attr/actionBarSize"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profileImage"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/ic_profile"
            app:civ_border_width="2dp"
            app:civ_border_color="#FF5722"
            android:contentDescription="@string/profile_image"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <ImageButton
            android:id="@+id/btnEditProfileImage"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/ic_edit_image"
            android:background="?attr/selectableItemBackgroundBorderless"
            app:layout_constraintBottom_toBottomOf="@id/profileImage"
            app:layout_constraintEnd_toEndOf="@id/profileImage"
            android:contentDescription="@string/edit_profile_image" />

    <TextView
        android:id="@+id/tvUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/username"
        android:textSize="18sp"
        android:gravity="left"
        app:layout_constraintTop_toBottomOf="@id/profileImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageButton
        android:id="@+id/btnEditUsername"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/edit_username"
        android:src="@drawable/ic_edit_username"
        app:layout_constraintStart_toEndOf="@id/tvUsername"
        app:layout_constraintTop_toTopOf="@id/tvUsername"
        app:layout_constraintBottom_toBottomOf="@id/tvUsername" />

    <EditText
        android:id="@+id/etUsernameEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_marginTop="16dp"
        android:textSize="18sp"
        android:gravity="left"
        app:layout_constraintTop_toBottomOf="@id/tvUsername"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageButton
        android:id="@+id/btnSaveUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_save"
        android:visibility="gone"
        android:background="?attr/selectableItemBackgroundBorderless"
        app:layout_constraintTop_toTopOf="@id/etUsernameEdit"
        app:layout_constraintStart_toEndOf="@id/etUsernameEdit"
        app:layout_constraintBottom_toBottomOf="@id/etUsernameEdit"/>

        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:layout_marginTop="16dp"
            android:textSize="18sp"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/etUsernameEdit"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnChangePassword"
        style="@style/CustomFilledBoxDense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/change_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvEmail" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCardProduct"
        style="@style/CustomFilledBoxDense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/product_card"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/btnChangePassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/logoutButton"
        style="@style/CustomFilledBoxDense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/btnCardProduct"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
